1. Introduce data_eb_inferred. 2. Return the value for mode_dict. 3.Update different strings for the 100% Stacked bar charts Y-axis labels.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -146,7 +146,15 @@
    "outputs": [],
    "source": [
     "data_eb = expanded_ct.query(f\"mode_confirm == '{mode_of_interest}'\") if \"mode_confirm\" in expanded_ct.columns else expanded_ct\n",
-    "quality_text_specific = scaffolding.get_quality_text(expanded_ct, data_eb, mode_of_interest, include_test_users)"
+    "data_eb_inferred = expanded_ct_inferred.query(f\"mode_confirm == '{mode_of_interest}'\") if \"mode_confirm\" in expanded_ct_inferred.columns else expanded_ct_inferred\n",
+    "mode_dict = scaffolding.get_quality_data_inferred(expanded_ct_inferred, expanded_ct, data_eb_inferred, data_eb)\n",
+    "\n",
+    "confirmed_trip_str = f\"Labeled by user\\n ({values_dict['confirmed_trip']} confirmed trips, {values_dict['unique_users_confirmed']} users\\n {values_dict['pct_confirmed']:.2f}% of total trips)\"\n",
+    "inferred_trip_str = f\"Inferred from history\\n ({values_dict['inferred_trip']} inferred trips, {values_dict['unique_users_inferred']} users \\n {values_dict['pct_inferred']:.2f}% of total trips)\"\n",
+    "sensed_trip_str = f\"Sensed by OpenPATH\\n ({values_dict['total_trip']} total trips, {values_dict['unique_users_total']} users)\"\n",
+    "\n",
+    "replaced_confirmed_trip_str = f\"Labeled `{mode_of_interest}` by user \\n ({mode_dict['mode_confirmed_trip']} confirmed trips, {mode_dict['unique_users_confirmed_mode']} users \\n {mode_dict['after_pct_confirmed']:.2f}% of confirmed trips)\"\n",
+    "replaced_inferred_trip_str = f\"Inferred `{mode_of_interest}` from history \\n ({mode_dict['mode_inferred_trip']} inferred trips, {mode_dict['unique_users_inferred_mode']} users \\n {mode_dict['after_pct_inferred']:.2f}% of inferred trips)\"\n"
    ]
   },
   {
