1. Update inferred bar. 2. Update the text description for the Y-axis bar. 3. Shorten the plot title description.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -185,16 +185,15 @@
     "    values = df[df_col].value_counts(dropna=True).tolist()\n",
     "    return process_trip_data(labels, values, trip_type)\n",
     "\n",
-    "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
+    "plot_title_no_quality= f\"Number of trips for each mode from {users} :\\n \"\n",
     "file_name = f'ntrips_total{file_suffix}'\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
-    "\n",
+    "    plot_title = plot_title_no_quality\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        df_confirmed_tc = process_data_frame(expanded_ct, 'Mode_confirm', confirmed_trip_str)\n",
     "        if not df_confirmed_tc.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirmed_tc)\n",
@@ -202,16 +201,25 @@
     "            print(\"df_confirmed_tc is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
+    "    if not expanded_ct_inferred.empty:\n",
+    "        df_inferred_tc = process_data_frame(expanded_ct_inferred, 'Mode_confirm', inferred_trip_str)\n",
+    "        if not df_inferred_tc.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_inferred_tc)\n",
+    "        else:\n",
+    "            print(\"df_inferred_tc is empty.\")\n",
+    "    else:\n",
+    "        print(\"expanded_ct_inferred is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
+    "        df_sensed_tc = process_data_frame(expanded_ct_sensed, 'primary_mode', sensed_trip_str)\n",
     "        if not df_sensed_tc.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_tc)\n",
     "        else:\n",
     "            print(\"df_sensed_tc is empty.\")\n",
     "    else:\n",
-    "        print(\"expanded_ct_sensed is empty\")\n",
+    "        print(\"expanded_ct_sensed is empty.\")\n",
     "\n",
     "    result_df = merge_dataframes(all_data_frames)\n",
     "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
