For Number of Trips for Replaced Mode: 1. Update inferred bar. 2. Update the text description for the Y-axis bar. 3. Shorten the plot title description.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -246,8 +246,8 @@
    "source": [
     "# Only applicable for program\n",
     "if study_type == \"program\":\n",
-    "    plot_title_no_quality= \"Number of trips for replaced mode\"\n",
-    "    file_name = f'ntrips_total_replaced_mode{file_suffix}'\n",
+    "    plot_title_no_quality= f\"Number of trips replaced by `{mode_of_interest}` from {users}: \\n\"\n",
+    "    file_name = f'ntrips_{mode_of_interest}_total{file_suffix}'\n",
     "\n",
     "    try:\n",
     "        bar_count = 0\n",
@@ -255,15 +255,24 @@
     "        plot_title = plot_title_no_quality\n",
     "\n",
     "        if not data_eb.empty:\n",
-    "            df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
-    "            all_data_frames.append(df_replaced_tc)\n",
+    "            df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', replaced_confirmed_trip_str)\n",
     "            if not df_replaced_tc.empty:\n",
     "                bar_count += 1\n",
-    "                plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "                all_data_frames.append(df_replaced_tc)\n",
     "            else:\n",
     "                print(\"df_replaced_tc is empty.\")\n",
     "        else:\n",
     "            print(\"data_eb is empty.\")\n",
+    "        \n",
+    "        if not data_eb_inferred.empty:\n",
+    "            df_replaced_inferred_tc = process_data_frame(data_eb_inferred, 'Replaced_mode', replaced_inferred_trip_str)\n",
+    "            if not df_replaced_inferred_tc.empty:\n",
+    "                bar_count += 1\n",
+    "                all_data_frames.append(df_replaced_inferred_tc)\n",
+    "            else:\n",
+    "                print(\"df_replaced_inferred_tc is empty.\")\n",
+    "        else:\n",
+    "            print(\"data_eb_inferred is empty.\")\n",
     "\n",
     "        result_df = merge_dataframes(all_data_frames)\n",
     "        stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
