--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -297,13 +297,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_data_for_cutoff(df, df_col, trip_type):\n",
+    "def process_data_for_cutoff(df, cutoff, df_col, trip_type):\n",
+    "    labels = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).keys().tolist()\n",
+    "    values = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).tolist()\n",
+    "    processed_data = process_trip_data(labels, values, trip_type)\n",
+    "    return processed_data\n",
     "\n",
-    "    cutoff = df.distance.quantile(0.8)\n",
+    "try:\n",
+    "    cutoff = expanded_ct_sensed.distance.quantile(0.8)\n",
     "    if pd.isna(cutoff):\n",
     "        cutoff = 0\n",
     "\n",
-    "    dist_threshold = df[distance_col].quantile(0.8).round(1)\n",
+    "    dist_threshold = expanded_ct_sensed[distance_col].quantile(0.8).round(1)\n",
     "    dist_threshold = str(dist_threshold)\n",
     "\n",
     "    labels = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).keys().tolist()\n",
