For 80th percentile number of trips: 1. Update inferred bar. 2. Update the text description for the Y-axis bar. 3. Shorten the plot title description.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -311,25 +311,17 @@
     "    dist_threshold = expanded_ct_sensed[distance_col].quantile(0.8).round(1)\n",
     "    dist_threshold = str(dist_threshold)\n",
     "\n",
-    "    labels = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).keys().tolist()\n",
-    "    values = df.loc[(df['distance'] <= cutoff)][df_col].value_counts(dropna=True).tolist()\n",
-    "    processed_data = process_trip_data(labels, values, trip_type)    \n",
+    "    plot_title_no_quality= f\"Number of trips under 80th percentile (<={dist_threshold} {label_units_lower}) for each mode from {users}: \\n\"\n",
+    "    file_name = f'ntrips_under80{file_suffix}'\n",
     "\n",
-    "    return processed_data,cutoff, dist_threshold\n",
-    "\n",
-    "plot_title_no_quality= \"Number of trips for 80th percentile for each mode (selected by users):\"\n",
-    "file_name = f'ntrips_under80{file_suffix}'\n",
-    "\n",
-    "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames_u80 = []\n",
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirmed_tc_u80,cutoff, dist_threshold  = process_data_for_cutoff(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Confirmed trips)\")\n",
-    "        u80_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff], \"<= \" + dist_threshold + \" \" + short_label, include_test_users)\n",
+    "        u80_dict = scaffolding.get_quality_data_u80(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff])\n",
+    "        df_confirmed_tc_u80  = process_data_for_cutoff(expanded_ct, cutoff, 'Mode_confirm', f\"Labeled by user\\n ({u80_dict['after_df']} confirmed trips, {u80_dict['unique_users_after']} users)\")\n",
     "        if not df_confirmed_tc_u80.empty:\n",
-    "            plot_title +=  \"\\n\" + \"For Labeled: \" + u80_quality_text\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_confirmed_tc_u80)\n",
     "        else:\n",
@@ -337,11 +329,21 @@
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
+    "    if not expanded_ct_inferred.empty:\n",
+    "        u80_dict_inferred = scaffolding.get_quality_data_u80(expanded_ct_inferred, expanded_ct_inferred[expanded_ct_inferred['distance'] <= cutoff])\n",
+    "        df_inferred_tc_u80  = process_data_for_cutoff(expanded_ct_inferred, cutoff, 'Mode_confirm', f\"Inferred from history\\n ({u80_dict_inferred['after_df']} inferred trips, {u80_dict_inferred['unique_users_after']} users)\")\n",
+    "        if not df_inferred_tc_u80.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames_u80.append(df_inferred_tc_u80)\n",
+    "        else:\n",
+    "            print(\"df_inferred_tc_u80 is not empty\")\n",
+    "    else:\n",
+    "        print(\"expanded_ct_inferred is empty.\")\n",
+    "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_tc_u80, cutoff_sensed, dist_threshold_sensed = process_data_for_cutoff(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Total trips)\")\n",
-    "        u80_quality_text_sensed = scaffolding.get_quality_text_sensed(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff_sensed], \"<= \" + dist_threshold_sensed + \" \" + short_label , include_test_users)\n",
+    "        u80_dict_sensed = scaffolding.get_quality_data_u80(expanded_ct_sensed, expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff])\n",
+    "        df_sensed_tc_u80 = process_data_for_cutoff(expanded_ct_sensed, cutoff, 'primary_mode', f\"Sensed by OpenPATH\\n ({u80_dict_sensed['after_df']} total trips, {u80_dict_sensed['unique_users_after']} users)\")\n",
     "        if not df_sensed_tc_u80.empty:\n",
-    "            plot_title +=  \"\\n\" + \"For Sensed: \" + u80_quality_text_sensed\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_sensed_tc_u80)\n",
     "        else:\n",
