--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -374,11 +374,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality= \"Number of commute trips for each mode (selected by users)\"\n",
+    "def process_commute_data_frame(df, df_col, trip_type):\n",
+    "    labels = df.query(df_col).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
+    "    values = df.query(df_col).Mode_confirm.value_counts(dropna=True).tolist()\n",
+    "    return process_trip_data(labels, values, trip_type)\n",
+    "\n",
+    "plot_title_no_quality= f\"Number of `commute` trips for each mode from {users}: \\n\"\n",
     "file_name = f\"ntrips_commute_mode_confirm{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
+    "    all_data_frames_commute = []\n",
     "    plot_title = plot_title_no_quality\n",
     "    if (len(dynamic_labels)):\n",
     "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
@@ -386,18 +392,31 @@
     "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
     "    else:\n",
     "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
-    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(trip_purpose_query), \"commute\", include_test_users)\n",
+    "\n",
+    "    commute_dict = scaffolding.get_quality_data_inferred(expanded_ct_inferred, expanded_ct, expanded_ct_inferred.query(trip_purpose_query), expanded_ct.query(trip_purpose_query))\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        bar_count += 1\n",
-    "        plot_title += \"\\n\" + \"For Labeled: \" + commute_quality_text\n",
+    "        df_total_trip_commute = process_commute_data_frame(expanded_ct, trip_purpose_query, f\"Labeled `commute` by users \\n ({commute_dict['mode_confirmed_trip']} confirmed trips, {commute_dict['unique_users_confirmed_mode']} users \\n {commute_dict['after_pct_confirmed']:.2f}% of {commute_dict['confirmed_trip']} confirmed trips)\")\n",
+    "        if not df_total_trip_commute.empty:\n",
+    "            all_data_frames_commute.append(df_total_trip_commute)\n",
+    "            bar_count += 1\n",
+    "        else:\n",
+    "            print(\"df_total_trip_commute is empty.\")\n",
+    "    else:\n",
+    "        print(\"expanded_ct is empty.\")\n",
     "\n",
-    "    labels_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
-    "    values_mc_commute = expanded_ct.query(trip_purpose_query).Mode_confirm.value_counts(dropna=True).tolist()\n",
+    "    if not expanded_ct_inferred.empty:\n",
+    "        df_total_trip_commute_inferred = process_commute_data_frame(expanded_ct_inferred, trip_purpose_query,f\" Inferred `commute` from history \\n ({commute_dict['mode_inferred_trip']} inferred trips, {commute_dict['unique_users_inferred_mode']} users \\n {commute_dict['after_pct_inferred']:.2f}% of {commute_dict['inferred_trip']} inferred trips)\")\n",
+    "        if not df_total_trip_commute_inferred.empty:\n",
+    "            all_data_frames_commute.append(df_total_trip_commute_inferred)\n",
+    "            bar_count += 1\n",
+    "        else:\n",
+    "            print(\"df_total_trip_commute_inferred is empty.\")\n",
+    "    else:\n",
+    "        print(\"expanded_ct_inferred is empty.\")\n",
     "\n",
-    "    df_total_trip_commute = process_trip_data(labels_mc_commute, values_mc_commute, \"Labeled by user\\n (Confirmed trips)\")\n",
-    "\n",
-    "    stacked_bar_chart_generic(plot_title, df_total_trip_commute, file_name, bar_count)\n",
+    "    result_df_commute = merge_dataframes(all_data_frames_commute)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df_commute, file_name, bar_count)\n",
     "    alt_text, alt_html = store_alt_text_stacked_bar_chart(df_total_trip_commute, file_name, plot_title)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
