--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -454,16 +454,16 @@
     "\n",
     "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
     "\n",
-    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by each mode\"\n",
+    "plot_title_no_quality = f\"Total trip length ({label_units_lower}) covered by each mode from {users}: \\n\"\n",
     "file_name = f\"total_trip_length{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
+    "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', \"Labeled by user\\n (Trip distance)\")\n",
+    "        df_confirm_dist = process_distance_data(expanded_ct, 'Mode_confirm', confirmed_trip_str)\n",
     "        if not df_confirm_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist)\n",
@@ -472,8 +472,18 @@
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
+    "    if not expanded_ct_inferred.empty:\n",
+    "        df_inferred_dist = process_distance_data(expanded_ct_inferred, 'Mode_confirm', inferred_trip_str)\n",
+    "        if not df_inferred_dist.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_inferred_dist)\n",
+    "        else:\n",
+    "            print(\"df_inferred_dist is empty.\")\n",
+    "    else:\n",
+    "        print(\"expanded_ct_inferred is empty.\")\n",
+    "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Overall)\")\n",
+    "        df_sensed_dist = process_distance_data(expanded_ct_sensed, 'primary_mode', sensed_trip_str)\n",
     "        if not df_sensed_dist.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist)\n",
