For Total Trip Length covered by each mode in Land: 1. Update inferred bar. 2. Update the text description for the Y-axis bar. 3. Shorten the plot title description.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -515,16 +515,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by each mode by land\"\n",
+    "plot_title_no_quality = f\"Total trip length ({label_units_lower}) covered by each mode via. land from {users}: \\n\"\n",
     "file_name = f\"total_trip_length_land{file_suffix}\"\n",
     "\n",
     "try:\n",
     "    bar_count = 0\n",
     "    all_data_frames = []\n",
-    "    plot_title = plot_title_no_quality + \"\\n\" + \"For Labeled and Sensed: \" + quality_text\n",
+    "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm', \"Labeled by user\\n (Trip distance - Land)\")\n",
+    "        df_confirm_dist_land = process_distance_data(expanded_ct[expanded_ct['Mode_confirm'] != \"Airplane\"], 'Mode_confirm', confirmed_trip_str)\n",
     "        if not df_confirm_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_confirm_dist_land)\n",
@@ -533,8 +533,18 @@
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
+    "    if not expanded_ct_inferred.empty:\n",
+    "        df_inferred_dist_land = process_distance_data(expanded_ct_inferred[expanded_ct_inferred['Mode_confirm'] != \"Airplane\"], 'Mode_confirm', inferred_trip_str)\n",
+    "        if not df_inferred_dist_land.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_inferred_dist_land)\n",
+    "        else:\n",
+    "            print(\"df_inferred_dist_land is empty.\")\n",
+    "    else:\n",
+    "        print(\"expanded_ct_inferred is empty.\")\n",
+    "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', \"Sensed by OpenPATH\\n (Trip distance - Land)\")\n",
+    "        df_sensed_dist_land = process_distance_data(expanded_ct_sensed[expanded_ct_sensed['primary_mode'] != \"AIR_OR_HSR\"], 'primary_mode', sensed_trip_str)\n",
     "        if not df_sensed_dist_land.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames.append(df_sensed_dist_land)\n",
