For Total Trip Length covered by replaced mode: 1. Update inferred bar. 2. Update the text description for the Y-axis bar. 3. Shorten the plot title description.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -578,25 +578,33 @@
    "source": [
     "# Applicable only for program\n",
     "if study_type == \"program\":\n",
-    "    plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by replaced mode\"\n",
-    "    file_name = f\"total_trip_length_replaced_mode{file_suffix}\"\n",
-    "\n",
+    "    plot_title_no_quality = f\"Total trip length ({label_units_lower}) replaced by `{mode_of_interest}` from {users}: \\n\"\n",
+    "    file_name = f\"total_trip_length_{mode_of_interest}_replaced_mode{file_suffix}\"\n",
+    "    \n",
     "    try:\n",
     "        bar_count = 0\n",
     "        all_data_frames = []\n",
-    "\n",
     "        plot_title = plot_title_no_quality\n",
     "\n",
     "        if not data_eb.empty:\n",
-    "            df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "            df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', replaced_confirmed_trip_str)\n",
     "            if not df_replaced_dist.empty:\n",
     "                bar_count += 1\n",
     "                all_data_frames.append(df_replaced_dist)\n",
-    "                plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
     "            else:\n",
     "                print(\"df_replaced_dist is empty.\")\n",
     "        else:\n",
     "            print(\"data_eb is empty.\")\n",
+    "        \n",
+    "        if not data_eb_inferred.empty:\n",
+    "            df_replaced_inferred_dist = process_distance_data(data_eb_inferred, 'Replaced_mode',replaced_inferred_trip_str)\n",
+    "            if not df_replaced_inferred_dist.empty:\n",
+    "                bar_count += 1\n",
+    "                all_data_frames.append(df_replaced_inferred_dist)\n",
+    "            else:\n",
+    "                print(\"df_replaced_inferred_dist is empty.\")\n",
+    "        else:\n",
+    "            print(\"data_eb_inferred is empty.\")\n",
     "\n",
     "        result_df = merge_dataframes(all_data_frames)\n",
     "        stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
