For number of trips for each purpose: 1. Remove the mode_specific computation. 2. Update inferred bar. 3. Update the text description for the Y-axis bar. 4. Shorten the plot title description.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -629,7 +629,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = \"Number of trips for each purpose (selected by users)\"\n",
+    "plot_title_no_quality = f\"Number of trips for each purpose from {users}: \\n\"\n",
     "file_name = f\"ntrips_purpose{file_suffix}\"\n",
     "\n",
     "try:\n",
@@ -638,26 +638,24 @@
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', \"Labeled by user\\n (Confirmed trips)\")\n",
+    "        df_purpose_trip = process_data_frame(expanded_ct, 'Trip_purpose', confirmed_trip_str)\n",
     "        if not df_purpose_trip.empty:\n",
-    "            plot_title += \"\\n\" + \"For Labeled: \" + quality_text\n",
     "            bar_count += 1\n",
     "            all_tp_data_frames.append(df_purpose_trip)\n",
     "        else:\n",
     "            print(\"df_purpose_trip is empty.\")\n",
     "    else:\n",
     "        print(\"expanded_ct is empty.\")\n",
-    "\n",
-    "    if not data_eb.empty:\n",
-    "        df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
-    "        if not df_purpose_trip_eb.empty:\n",
-    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text_specific\n",
+    "    \n",
+    "    if not expanded_ct_inferred.empty:\n",
+    "        df_purpose_trip_inferred = process_data_frame(expanded_ct_inferred, 'Trip_purpose', inferred_trip_str)\n",
+    "        if not df_purpose_trip_inferred.empty:\n",
     "            bar_count += 1\n",
-    "            all_tp_data_frames.append(df_purpose_trip_eb)\n",
+    "            all_tp_data_frames.append(df_purpose_trip_inferred)\n",
     "        else:\n",
-    "            print(\"df_purpose_trip_eb is empty.\")\n",
+    "            print(\"df_purpose_trip_inferred is empty.\")\n",
     "    else:\n",
-    "        print(\"data_eb is empty.\")\n",
+    "        print(\"expanded_ct_inferred is empty.\")\n",
     "\n",
     "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
     "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
