Add 100% stacked bar chart for number  of trips for each purpose by replaced mode.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -667,6 +667,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "db3e20c3",
+   "metadata": {},
+   "source": [
+    "### 9. Represents number of trips for each purpose by replaced mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6d45e74",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Applicable only for program\n",
+    "if study_type == \"program\":\n",
+    "    plot_title_no_quality = f\"Number of `{mode_of_interest}` trips for each purpose from {users}: \\n\"\n",
+    "    file_name = f\"ntrips_{mode_of_interest}_purpose{file_suffix}\"\n",
+    "\n",
+    "    try:\n",
+    "        bar_count = 0\n",
+    "        all_tp_data_frames = []\n",
+    "        plot_title = plot_title_no_quality\n",
+    "\n",
+    "        if not data_eb.empty:\n",
+    "            df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', replaced_confirmed_trip_str)\n",
+    "            if not df_purpose_trip_eb.empty:\n",
+    "                bar_count += 1\n",
+    "                all_tp_data_frames.append(df_purpose_trip_eb)\n",
+    "            else:\n",
+    "                print(\"df_purpose_trip_eb is empty.\")\n",
+    "        else:\n",
+    "            print(\"data_eb is empty.\")\n",
+    "            \n",
+    "        if not data_eb_inferred.empty:\n",
+    "            df_purpose_trip_inferred_eb = process_data_frame(data_eb_inferred, 'Trip_purpose', replaced_inferred_trip_str)\n",
+    "            if not df_purpose_trip_inferred_eb.empty:\n",
+    "                bar_count += 1\n",
+    "                all_tp_data_frames.append(df_purpose_trip_inferred_eb)\n",
+    "            else:\n",
+    "                print(\"df_purpose_trip_inferred_eb is empty.\")\n",
+    "        else:\n",
+    "            print(\"data_eb is empty.\")\n",
+    "\n",
+    "        result_tp_df = merge_dataframes(all_tp_data_frames)\n",
+    "        stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
+    "        alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
+    "    except:\n",
+    "        generate_missing_plot(plot_title_no_quality, merged_debug_df, file_name)\n",
+    "        alt_text = store_alt_text_missing(merged_debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bcef1f6a",
    "metadata": {},
    "source": [
