Adding % of total trips for 80th percentile charts.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -319,8 +319,8 @@
     "    plot_title = plot_title_no_quality\n",
     "\n",
     "    if not expanded_ct.empty:\n",
-    "        u80_dict = scaffolding.get_quality_data_u80(expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff])\n",
-    "        df_confirmed_tc_u80  = process_data_for_cutoff(expanded_ct, cutoff, 'Mode_confirm', f\"Labeled by user\\n ({u80_dict['after_df']} confirmed trips, {u80_dict['unique_users_after']} users)\")\n",
+    "        u80_dict = scaffolding.get_quality_data_u80(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff], expanded_ct, expanded_ct[expanded_ct['distance'] <= cutoff])\n",
+    "        df_confirmed_tc_u80  = process_data_for_cutoff(expanded_ct, cutoff, 'Mode_confirm', f\"Labeled by user\\n ({u80_dict['after_df']} confirmed trips, {u80_dict['unique_users_after']} users \\n {u80_dict['after_pct']:.2f}% of total trips)\")\n",
     "        if not df_confirmed_tc_u80.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_confirmed_tc_u80)\n",
@@ -330,8 +330,8 @@
     "        print(\"expanded_ct is empty.\")\n",
     "\n",
     "    if not expanded_ct_inferred.empty:\n",
-    "        u80_dict_inferred = scaffolding.get_quality_data_u80(expanded_ct_inferred, expanded_ct_inferred[expanded_ct_inferred['distance'] <= cutoff])\n",
-    "        df_inferred_tc_u80  = process_data_for_cutoff(expanded_ct_inferred, cutoff, 'Mode_confirm', f\"Inferred from history\\n ({u80_dict_inferred['after_df']} inferred trips, {u80_dict_inferred['unique_users_after']} users)\")\n",
+    "        u80_dict_inferred = scaffolding.get_quality_data_u80(expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff], expanded_ct_inferred, expanded_ct_inferred[expanded_ct_inferred['distance'] <= cutoff])\n",
+    "        df_inferred_tc_u80  = process_data_for_cutoff(expanded_ct_inferred, cutoff, 'Mode_confirm', f\"Inferred from history\\n ({u80_dict_inferred['after_df']} inferred trips, {u80_dict_inferred['unique_users_after']} users \\n {u80_dict_inferred['after_pct']:.2f}% of total trips)\")\n",
     "        if not df_inferred_tc_u80.empty:\n",
     "            bar_count += 1\n",
     "            all_data_frames_u80.append(df_inferred_tc_u80)\n",
@@ -341,7 +341,7 @@
     "        print(\"expanded_ct_inferred is empty.\")\n",
     "\n",
     "    if not expanded_ct_sensed.empty:\n",
-    "        u80_dict_sensed = scaffolding.get_quality_data_u80(expanded_ct_sensed, expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff])\n",
+    "        u80_dict_sensed = scaffolding.get_quality_data_u80(expanded_ct_sensed, expanded_ct_sensed, expanded_ct_sensed[expanded_ct_sensed['distance'] <= cutoff])\n",
     "        df_sensed_tc_u80 = process_data_for_cutoff(expanded_ct_sensed, cutoff, 'primary_mode', f\"Sensed by OpenPATH\\n ({u80_dict_sensed['after_df']} total trips, {u80_dict_sensed['unique_users_after']} users)\")\n",
     "        if not df_sensed_tc_u80.empty:\n",
     "            bar_count += 1\n",
