break survey notebook if irrelevant
similar to the mode-specific notebooks, we ONLY want to run this notebook if the trip labels are surveys (ENKETO)

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -99,6 +99,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f85d2a9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do not run this notebook at all unless it is for a survey configuration; nbclient will run up through this cell\n",
+    "if not survey_info['trip-labels'] == 'ENKETO':\n",
+    "    ipython = get_ipython()\n",
+    "    ipython._showtraceback = scaffolding.no_traceback_handler\n",
+    "    raise Exception(\"The plots in this notebook are only relevant to deployments with trip-level surveys\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c739be2d",
    "metadata": {},
    "outputs": [],
