filter trips - required to keep out test users

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -260,6 +260,8 @@
     "#load all of the composite trips - require sections\n",
     "tq = scaffolding.get_time_query(year, month)\n",
     "all_composite_trips = scaffolding.load_all_composite_trips(tq)\n",
+    "#we need to filter out trips (based on if including test users)\n",
+    "all_composite_trips = scaffolding.filter_composite_trips(all_composite_trips, program, include_test_users)\n",
     "\n",
     "if len(all_composite_trips) > 0:\n",
     "    #remove blank inputs\n",
