debug df per survey
the pools of trips and labeled trips differ per - survey, so the debug dataframes should reflect that

if statement used to generate empty labeled df if total df is empty

--- a/viz_scripts/survey_responses.ipynb
+++ b/viz_scripts/survey_responses.ipynb
@@ -232,7 +232,21 @@
     "    except:\n",
     "        result = False\n",
     "\n",
-    "    return result"
+    "    return result\n",
+    "\n",
+    "#create a debug dataframe\n",
+    "def generate_debug_df(program, include_test_users, full_df, labeled_df):\n",
+    "    debug_df = pd.DataFrame.from_dict({\n",
+    "            \"year\": year,\n",
+    "            \"month\": month,\n",
+    "            \"Registered_participants\": len(scaffolding.get_participant_uuids(program, include_test_users)),\n",
+    "            \"Participants_with_at_least_one_trip\": scaffolding.unique_users(full_df),\n",
+    "            \"Participant_with_at_least_one_labeled_trip\": scaffolding.unique_users(labeled_df),\n",
+    "            \"Trips_with_at_least_one_label\": len(labeled_df)\n",
+    "            },\n",
+    "        orient='index', columns=[\"value\"])\n",
+    "    \n",
+    "    return debug_df"
    ]
   },
   {
@@ -280,18 +294,7 @@
     "    #only want trips with sections\n",
     "    all_composite_trips = all_composite_trips[all_composite_trips['sections'].str.len() > 0]\n",
     "else:\n",
-    "    survey_trips = pd.DataFrame()\n",
-    "\n",
-    "#debug_df\n",
-    "debug_df = pd.DataFrame.from_dict({\n",
-    "        \"year\": year,\n",
-    "        \"month\": month,\n",
-    "        \"Registered_participants\": len(scaffolding.get_participant_uuids(program, include_test_users)),\n",
-    "        \"Participants_with_at_least_one_trip\": scaffolding.unique_users(all_composite_trips),\n",
-    "        \"Participant_with_at_least_one_labeled_trip\": scaffolding.unique_users(survey_trips),\n",
-    "        \"Trips_with_at_least_one_label\": len(survey_trips)\n",
-    "        },\n",
-    "    orient='index', columns=[\"value\"])"
+    "    survey_trips = pd.DataFrame()"
    ]
   },
   {
@@ -362,6 +365,8 @@
     "#create one plot per question in the survey\n",
     "for survey_name in quest_dict.keys():\n",
     "    print(\"Charts for:\", survey_name)\n",
+    "    debug_df = generate_debug_df(program, include_test_users, total_dfs[survey_name], total_dfs[survey_name][total_dfs[survey_name]['user_input'] != {} if len(total_dfs[survey_name]) > 0 else pd.DataFrame()])\n",
+    "    \n",
     "\n",
     "    for col in quest_dict[survey_name].keys():\n",
     "        \n",
