Shift the implementation of mode specific trips by purpose to mode_specific_metrics notebook from generic_metrics.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -181,6 +181,45 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "006ba3de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_data_frame(df, df_col, trip_type):\n",
+    "    labels = df[df_col].value_counts(dropna=True).keys().tolist()\n",
+    "    values = df[df_col].value_counts(dropna=True).tolist()\n",
+    "    return process_trip_data(labels, values, trip_type)\n",
+    "\n",
+    "plot_title_no_quality = f\"Number of trips for each purpose for {mode_of_interest}\"\n",
+    "file_name= f\"ntrips_{mode_of_interest}_purpose%s{file_suffix}\"\n",
+    "\n",
+    "try:\n",
+    "    bar_count = 0\n",
+    "    all_tp_data_frames = []\n",
+    "    plot_title = plot_title_no_quality\n",
+    "\n",
+    "    if not data_eb.empty:\n",
+    "        df_purpose_trip_eb = process_data_frame(data_eb, 'Trip_purpose', f\"Labeled `{mode_of_interest}` by user\")\n",
+    "        if not df_purpose_trip_eb.empty:\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
+    "            bar_count += 1\n",
+    "            all_tp_data_frames.append(df_purpose_trip_eb)\n",
+    "        else:\n",
+    "            print(\"df_purpose_trip_eb is empty.\")\n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    result_tp_df = merge_dataframes(all_tp_data_frames)\n",
+    "    stacked_bar_chart_generic(plot_title, result_tp_df, file_name, bar_count)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_tp_df[result_tp_df['Count'] > 0], file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dependent-reservoir",
    "metadata": {},
