Shift the implementation of mode specific Total Trip Length to mode_specific_metrics notebook from generic_metrics.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -224,7 +224,58 @@
    "id": "dependent-reservoir",
    "metadata": {},
    "source": [
-    "### Miles for each mode replaced by the specified mode"
+    "### Total Trip Length for each mode replaced by the specified mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b415510",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_distance_data(df, df_col, trip_type):\n",
+    "    dist = df.groupby(df_col).agg({distance_col: ['sum', 'count', 'mean']})\n",
+    "    dist.columns = ['Total (' + label_units_lower + ')', 'Count', 'Average (' + label_units_lower + ')']\n",
+    "    dist = dist.reset_index()\n",
+    "    dist = dist.sort_values(by=['Total (' + label_units_lower + ')'], ascending=False)\n",
+    "\n",
+    "    dist_dict = dict(zip(dist[df_col], dist['Total (' + label_units_lower + ')']))\n",
+    "    labels_dist = []\n",
+    "    values_dist = []\n",
+    "\n",
+    "    for x, y in dist_dict.items():\n",
+    "        labels_dist.append(x)\n",
+    "        values_dist.append(y)\n",
+    "\n",
+    "    return process_trip_data(labels_dist, values_dist, trip_type)\n",
+    "\n",
+    "plot_title_no_quality = \"Total trip length (\" + label_units_lower + \") covered by replaced mode\"\n",
+    "file_name = f\"total_trip_length_replaced_mode{file_suffix}\"\n",
+    "\n",
+    "try:\n",
+    "    bar_count = 0\n",
+    "    all_data_frames = []\n",
+    "\n",
+    "    plot_title = plot_title_no_quality\n",
+    "\n",
+    "    if not data_eb.empty:\n",
+    "        df_replaced_dist = process_distance_data(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\\n (Replaced distance)\")\n",
+    "        if not df_replaced_dist.empty:\n",
+    "            bar_count += 1\n",
+    "            all_data_frames.append(df_replaced_dist)\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
+    "        else:\n",
+    "            print(\"df_replaced_dist is empty.\")\n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)\n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality, debug_df, file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
   },
   {
