Shift the implementation of mode specific Number of Trips to mode_specific_metrics notebook from generic_metrics.

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -280,6 +280,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "be6bb4be",
+   "metadata": {},
+   "source": [
+    "### Number of Trips for each mode replaced by specified mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3947a5f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_title_no_quality= \"Number of trips for replaced mode\"\n",
+    "file_name = f'ntrips_total_replaced_mode{file_suffix}'\n",
+    "\n",
+    "try:\n",
+    "    bar_count = 0\n",
+    "    all_data_frames = []\n",
+    "    plot_title = plot_title_no_quality\n",
+    "\n",
+    "    if not data_eb.empty:\n",
+    "        df_replaced_tc = process_data_frame(data_eb, 'Replaced_mode', f\"Labeled `{mode_of_interest}` by user\" )\n",
+    "        all_data_frames.append(df_replaced_tc)\n",
+    "        if not df_replaced_tc.empty:\n",
+    "            bar_count += 1\n",
+    "            plot_title += \"\\n\" + f\"For {mode_of_interest}: \" + quality_text\n",
+    "        else:\n",
+    "            print(\"df_replaced_tc is empty.\")\n",
+    "    else:\n",
+    "        print(\"data_eb is empty.\")\n",
+    "\n",
+    "    result_df = merge_dataframes(all_data_frames)\n",
+    "    stacked_bar_chart_generic(plot_title, result_df, file_name, bar_count)\n",
+    "    alt_text, alt_html = store_alt_text_stacked_bar_chart(result_df[result_df['Count'] > 0], file_name, plot_title)  \n",
+    "except:\n",
+    "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
+    "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "honest-dylan",
    "metadata": {},
    "source": [
